<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/Magenta"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold">
        </TextView>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">

            <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editFN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/FrontName"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/editBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/BackName"
                android:inputType="textPersonName"/>

        </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTmptLhr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tempatlahir"
                    android:inputType="textPersonName"/>
                <EditText
                    android:id="@+id/editTglLhr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/TanggalLahiir"
                    android:inputType="textPersonName"/>

            </TableRow>
        </TableLayout>

        <EditText
            android:id="@+id/editAlmt"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:ems="10"
            android:hint="@string/Alamat"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/JenisKelamin">
        </TextView>
        <RadioGroup
            android:id="@+id/RG1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/JK1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/JK1"></RadioButton>

            <RadioButton
                android:id="@+id/JK2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/JK2"></RadioButton>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Agama"></TextView>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RG2"
            >

        <RadioButton
            android:id="@+id/Agama2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Agama1"></RadioButton>

        <RadioButton
            android:id="@+id/Agama3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Agama2"></RadioButton>

        <RadioButton
            android:id="@+id/Agama1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Agama3"></RadioButton>



            <RadioButton
                android:id="@+id/Agama4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Agama4"
                ></RadioButton>

        </RadioGroup>

        <EditText
            android:id="@+id/editTelpon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/Telepon"
            android:inputType="number|phone"
            />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/Pass"
                android:ems="10"
                android:hint="@string/Pass"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passReturn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/RePass"
                android:ems="10"
                android:hint="@string/RePass"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/bttnKembali"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Kembali"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="40dp"
                        android:background="@drawable/roundedbutton"/>
                    <Button
                        android:id="@+id/btnDaftar"
                        android:text="@string/Daftar"
                        android:layout_width="150dp"
                        android:layout_height="49dp"
                        android:layout_gravity="end"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="25dp"
                        android:background="@drawable/roundedbutton">
                    </Button>
                </TableRow>
            </TableLayout>
        </LinearLayout>


    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>